<resources>
    <string name="app_name">EZLearn</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_msg">Welcome back! Glad to see you, again!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_msg">Hello! Register to get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="convert">Convert</string>
    <string name="mindmap">Mindmap</string>
    <string name="summarize">Summarize</string>
    <string name="fullname">Fullname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="empty_mindmap">Empty</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="summarizer">Summarizer</string>
    <string name="quiz">Quiz</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="query">Query</string>
    <string name="smart_search">Smart Search</string>
    <string name="edit">Edit</string>
    <string name="library">Library</string>
    <string name="processed_text">Processed Text</string>
    <string name="date">Date</string>
    <string name="enter_title">Enter title <font color='#FF0000'>*</font></string>
</resources>