<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/tvRegisterActivity"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:inputType="textMultiLine"
        android:text="@string/register_msg"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRegisterUsernameLayout"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:inputType="text"
        app:boxBackgroundColor="@color/light_gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterUsernameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:fontFamily="@font/urbanist"
            android:padding="15dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRegisterEmailLayout"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@color/light_gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterEmailText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:fontFamily="@font/urbanist"
            android:padding="15dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRegisterFullnameLayout"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@color/light_gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterFullnameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:fontFamily="@font/urbanist"
            android:padding="15dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRegisterPasswordLayout"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/light_gray"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPasswordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/urbanist"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.72">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/urbanist"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/female"
            android:fontFamily="@font/urbanist"
            android:textSize="18sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_transparent_bg"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/urbanist_bold"
        android:textAllCaps="false"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist"
            android:text="Already have an account?"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvLoginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="Login Now"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>