<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MindmapActivity">

    <TextView
        android:id="@+id/tvMindmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/mindmap"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/documentList"
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/stroked_rounded_transparent_bg"
        android:textAlignment="textStart"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMindmap"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_transparent_bg"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_transparent_bg"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>