<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/smartSearchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:foreground="@android:color/transparent"
    tools:context=".activities.SmartSearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvSmartSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/smart_search"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/tvQueryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/query"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSmartSearch"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/tvQuery"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/stroked_rounded_white_bg"
                android:fontFamily="@font/urbanist_bold"
                android:text=""
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQueryText"
                app:layout_constraintVertical_bias="0.1"
                tools:ignore="TextViewEdits" />

            <TextView
                android:id="@+id/tvResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuery"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/stroked_rounded_white_bg"
                android:fontFamily="@font/urbanist_bold"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvResultText"
                app:layout_constraintVertical_bias="0.1"
                tools:ignore="TextViewEdits" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:elevation="20dp"
        android:indeterminateTint="@color/teal_200"
        android:visibility="gone" />

</FrameLayout>